--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "4.5",
+    "fs": "^0.0.1-security",
     "jquery": "^3.6.3",
+    "node-fetch": "^3.3.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "xml2json": "^0.12.0"
   },
   "version": "0.1.0",
   "devDependencies": {
